# yandex-algo-trainings

./: .pre-commit-config.yaml  README.md  pyproject.toml
algorithms/complexity_testing/: circle_line.py  dates.py  interactor.py  notes.md  school_building.py  triangle.py
algorithms/linear_search/: atrium.py  count_max.py  diplom.py  houses_shops.py  notes.md  palindrome.py
tests/: lint.py
tests/tests_complexity_module/: test_circle_line.py  test_dates.py  test_interactor.py  test_school_building.py  test_triangle.py
tests/tests_linear_search/: test_atrium.py  test_count_max.py  test_diplom.py  test_houses_shops.py  test_palindrome.py
