[tool.poetry]
name = "yandex-algo"
version = "0.1.0"
description = "Yandex.Algorithms training v2.0"
authors = ["gordeev.al <aleksandr_gordeev2@epam.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"
flake8 = "4.0.1"
black = "22.3.0"
pre-commit-hooks = "4.2.0"
pylint = "^2.13.9"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
